# PySolid

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build-and-publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: logo.pptx  plot_grid_SET.ipynb  plot_point_SET.ipynb  requirements.txt
pysolid/: __init__.py  grid.py  point.py  solid.for  version.py
src/pysolid/: __init__.py  grid.py  point.py  solid.for  version.py
src/pysolid/py_solid/: __init__.py  grid.py  point.py  solid.py
test/: conda39.txt  precompile_solid.sh  test.py
tests/: conda.txt  grid.py  grid_pyimpl.py  point.py  point_pyimpl.py  precompile_solid.sh  requirements.txt  test_SET_grid.py  test_SET_point.py  test_grid.py  test_point.py
