[build-system]
requires = ["setuptools<60.0", "setuptools_scm[toml]>=6.2", "oldest-supported-numpy", "wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "pysolid"
authors = [
    {name="Zhang Yunjun", email="yunjunzgeo@gmail.com"},
    {name="Dennis Milbert"},
]
description = "A Python wrapper for solid to compute solid Earth tides"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["solid Earth tides", "deformation", "geodesy", "geophysics"]
license = {text = "GPL-3.0-or-later"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/insarlab/PySolid"
"Bug Tracker" = "https://github.com/insarlab/PySolid/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pysolid = ["*.for"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
